# ogm

./: .gitignore  Justfile  README.md  pyproject.toml
generators/go-lite/: README.md  pom.xml
generators/go-lite-example-stub/: client.go  go.mod  main.go
generators/go-lite/src/main/java/com/border_town/oag/go/lite/: GoLiteGenerator.java
generators/go-lite/src/main/resources/go-lite/: api.mustache  client.mustache  ml_model.mustache  ml_model_anyof.mustache  ml_model_oneof.mustache  ml_model_simple.mustache  model.mustache  model_anyof.mustache  model_oneof.mustache  model_simple.mustache  nullable_model.mustache
generators/go-lite/src/test/java/com/border_town/oag/go/lite/: GoLiteGeneratorTest.java
scripts/: pyproject.toml
scripts/src/ogm/: __main__.py  deps.py  gen.py  paths.py  root.py
scripts/src/ogtt/: __init__.py  deps.py  gen.py
src/ogtt/: __main__.py  build.py  deps.py  gen.py  paths.py
templates/go/: api.mustache  client.mustache  configuration.mustache  model.mustache  model_simple.mustache  openapi.mustache  response.mustache  utils.mustache
test/: .gitignore  README.md
test/src/ogtt/: __init__.py  gen.py  paths.py  root.py
