[project]
name = "ogtt"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tim Simpson", email = "timsimpson4@gmail.com" }
]
dependencies = [
    "frontdoor>=0.1.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"ogtt" = "ogtt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.8.0",
    "mypy>=1.11.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ogtt"]
